# cli-decorator

./: README.md  pyproject.toml
src/cli_decorator/: Animation.py  Logger.py  Palette.py  SubScreen.py  __main__.py
